--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
               <!-- Begin Student 1  - Tom-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/thomas-rowson.html">
+                    <img width="304" height="304" class="prof-image" src="https://avatars0.githubusercontent.com/u/38005225?s=460&v=4" class="attachment-blog-thumb wp-post-image" alt="Tom-Rowson">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/thomas-rowson.html">Tom Rowson</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"Tossed Salad and Scrambled Eggs"</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I have recently left a career in law to pursue coding full-time, as I enjoyed programming much more than anything I was doing in my job!</p>
                 </div>
                 <div class="clear"></div>
               </li>
