--- a/index.html
+++ b/index.html
@@ -147,18 +147,18 @@
               <!-- Begin Student 3 - Andy-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/andy_purbrick.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/andy_purbrick.jpg" class="attachment-blog-thumb wp-post-image" alt="andy_purbrick">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/andy_purbrick.html">Andy Purbrick</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Go big or go bigger!</p>
                 </div>
                 <div class="clear"></div>
 
