--- a/students/andy_purbrick.html
+++ b/students/andy_purbrick.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/andy_purbrick_background.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Andy Purbrick</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -94,17 +94,17 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/andy_purbrick.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Andy Purbrick</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://twitter.com/andypurbrick"><i class="icon-twitter ib-social-icons"></i></a>
+          <a href="http://www.linkedin.com/in/andypurbrick/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
           <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>Go big or go bigger!</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut.
+                  Retraining as a software developer after 15 years working in digital media planning and buying.
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>London South Bank University</li>
+                  <li>Flatiron School</li>
                 </ul>
               </div>
             </div>
@@ -158,9 +158,9 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>Flatiron</h4>
                 <p>
-                  Blurb about company...
+                  Digital media planning/buying
                 </p>
               </div>
             </div>
@@ -176,7 +176,7 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="http://www.github.com/apcrypto" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
                 <div class="column fourth">
@@ -259,9 +259,9 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
+                      <a>Berlin</a><br>
                       <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
+                      <a>Los Angeles</a><br>
                       <a>New York</a><br>
                     </p>
                   </div>
@@ -273,9 +273,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="#">http://www.residentadvisor.net/</a><br>
+                    - Favorite Comic: Andy hates comics with a passion<br>
+
                   </p>
                 </div>
               </div>
