added page and images for Sunny

--- a/index.html
+++ b/index.html
@@ -197,23 +197,24 @@
               <!-- Begin Student 5 - Sunny -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/sunny_patel.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/sunny_patel_profile.jpeg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Sunny Patel</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">“Aspire to climb as high as you dream”</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Excited and new to coding, keen to get stuck in. Love experiencing new cuisines and cultures through travel, fan of pop culture, into spirituality and "conciousness", and health and fitness.
+</p>
                 </div>
                 <div class="clear"></div>
               </li>
