--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/student_jack_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
@@ -172,18 +172,18 @@
               <!-- Begin Student 4 - Jack -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/student_jack.html">
+                    <img width="304" height="304" class="prof-image" src="img/student_jack_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_jack.html">Jack Ling</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">You miss 100% of the shots you don’t take</p>
                 </div>
                 <div class="clear"></div>
 
