--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Retraining as a software developer after 15 years working in digital media planning and buying.</p>
                 </div>
                 <div class="clear"></div>
               </li>
