--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <!-- Begin Student 6 - Claudia -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="students/Claudia_Fox.html">
                     <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
@@ -230,15 +230,15 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Claudia Fox</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Everyday Hero</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>My sarcasm and sincerity sound surprisingly similar.</p>
                 </div>
                 <div class="clear"></div>
               </li>
