--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
               <!-- Begin Student 2 - Janine-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/janine.html">
+                    <img width="304" height="304" class="prof-image" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/43141241_10217877875842551_3263328095804850176_n.jpg?_nc_cat=104&_nc_ht=scontent-lhr3-1.xx&oh=98802671e12d44aefbf536fd35a3c0a9&oe=5C7A5E4D" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/janine.html">Janine</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta"></p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>YAAAAASSSSSSS</p>
                 </div>
                 <div class="clear"></div>
               </li>
