--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>I'm a mechanical engineering graduate that has recently finished my teacher training year. After struggling to fit in with engineering and education, I decided to finally follow through with what I think I truly enjoy. While in university, I was part of the a cappella society as a tenor and beatboxer. I also actively participate in video game tournaments with teammates and friends.</p>
+                  <p>I'm a mechanical engineering graduate that has recently finished my teacher training year. After struggling to fit in with engineering and education, I decided to finally follow through with what I think I truly enjoy.</p>
                 </div>
                 <div class="clear"></div>
               </li>
